<resources>
    <string name="app_name">Inspestor</string>
    <string name="app_motto">Your insect pest detector.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Capture</string>
    <string name="library">Six Major Insect Pest in Rice Fields</string>
    <string name="lib_title">LIBRARY</string>
    <string name="title_activity_insect_library">insect_library</string>

    <!-- fragment strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_on_boarding">MainOnBoardingActivity</string>


    <!--navigation-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="back">BACK</string>

    <!--Onboarding Navigations-->
    <string name="skip_text"> skip </string>
    <string name="start_text">start</string>
    <string name="finish_text"> finish </string>
    <string name="next_text"> next </string>
    <string name="previous_text">back</string>
    <!--result-->
    <string name="result_title">INSECT RESULT</string>
    <string name="result_sub">Recommended active chemical content in Pesticide</string>
    <string name="pest_name">Insect Pest Name</string>
    <string name="pest_reco">Pesticide Recommendation</string>

    <!-- overlay-->
    <string name="overlay_text">Place the insect inside the box</string>

----------------------------------------<!--Onboarding-->-------------------------------------------
    <string name="onboard_title1"> Welcome to Inspestor!</string>

        <string name="onboard_desc1"> 
            Here are some instructions when using Inspestor.  
        </string>

    <string name="onboard_title2"> ZOOM </string>

        <string name="onboard_desc2"> 
            When capturing tiny insect pest, it is advised to zoom in.  
        </string>

    <string name="onboard_title3"> FOCUS </string>

        <string name="onboard_desc3"> 
            Make sure that the camera is focused to the insect pest and have a proper lighting. 
        </string>
    
    --------------------------------------------------<!-- instructions--> -----------------------------------------------------------
    <string name="manual">How to identify insect using Inspestor</string>
    <string name="man_sub">Instructions to use our app:</string>
    <string name="one">1. To accurately detect insect pests,place the insect at the center of the camera preview and zoom in if
                        possible. Have proper lighting, the lighting should not be directed to the insect, and the camera should focus on the insect.</string>
    <string name="two">2. Click on the camera button to capture the insect pest or the gallery to upload an image.</string>
    <string name="three">3. After capturing or uploading, click OK to process the image.</string>
    <string name="four">4. Inspestor will provide results of the kind of insect pest and then recommend generic pesticides
                        for users to eliminate insect pests.
                        \nFor further information about the insect pest you can click the result box.</string>
    <string name="slogan">Your insect pest detector for rice fields.</string>

    --------------------------------------------------<!--Information--> -----------------------------------------------------------

    <string name="info_title">INFORMATION</string>
    <string name="abt_us">ABOUT US</string>
    <string name="dev_team">
        Khrysma Dei Caldina
        \nClarence Gealon
        \nAlyza Marie Tarrazona
        \nClarnick Yap
        \nPaola Bianca Zarriz
    </string>
    <string name="thesis">
        This is a thesis project created by BS Information Technology students from CICT-WVSU.
        S.Y. 2022 - 2023
    </string>
    <string name="ack">
        We would like to thank Department of Agriculture Region 6, RCPC.
    </string>
</resources>