<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instruction">
    <View
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_btn"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#e2e2e2"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/black"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lib_title"
            android:fontFamily="@font/be_vietnam"
            android:layout_marginStart="10dp"
            android:text="INSTRUCTION"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_btn"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroller"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header">

            <TextView
                android:id="@+id/title"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/be_vietnam"
                android:text="@string/manual"
                android:textColor="@color/green_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/sub"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/sub"
                android:text="@string/man_sub"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:fontFamily="@font/abel"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/title"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text="@string/one"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abel"
                android:id="@+id/man_one"
                app:layout_constraintStart_toStartOf="@id/sub"
                app:layout_constraintTop_toBottomOf="@id/sub"/>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:src="@drawable/one"
                android:id="@+id/img_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/man_one" />


            <ImageView
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:src="@drawable/two"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toEndOf="@id/img_one"
                app:layout_constraintTop_toBottomOf="@id/man_one" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text="@string/two"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abel"
                android:id="@+id/man_two"
                app:layout_constraintStart_toStartOf="@id/sub"
                app:layout_constraintTop_toBottomOf="@id/img_one"/>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:src="@drawable/three"
                android:id="@+id/img_three"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/man_two" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text="@string/three"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abel"
                android:id="@+id/man_three"
                app:layout_constraintStart_toStartOf="@id/sub"
                app:layout_constraintTop_toBottomOf="@id/img_three"/>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:src="@drawable/four"
                android:id="@+id/img_four"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/man_three" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text="@string/four"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abel"
                android:id="@+id/man_four"
                app:layout_constraintStart_toStartOf="@id/sub"
                app:layout_constraintTop_toBottomOf="@id/img_four"/>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:src="@drawable/five"
                android:id="@+id/img_five"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/man_four" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/img_five"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>