<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".Info">
    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/spaceBar"
        android:background="@color/app_bg"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingHorizontal="30dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/spaceBar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/back_btn"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:backgroundTint="@color/green1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/bck_fin"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:fontFamily="@font/be_vietnam"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/info_title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/back_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <TextView
                android:id="@+id/about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abt_us"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"/>

            <RelativeLayout
                android:id="@+id/logos_school"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toTopOf="@+id/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_us">

                <ImageView
                    android:id="@+id/cict_logo"
                    android:layout_width="123dp"
                    android:layout_height="123dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="65dp"
                    android:layout_marginEnd="43dp"
                    android:src="@drawable/cict" />

                <ImageView
                    android:id="@+id/wvsu_logo"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="42dp"
                    android:src="@drawable/wvsu" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="240dp"
                android:layout_height="70dp"
                android:src="@drawable/thesis_logo_2"
                app:layout_constraintBottom_toTopOf="@id/detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logos_school" />

            <TextView
                android:id="@+id/detail"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/thesis"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logos_school" />

            <TextView
                android:id="@+id/dev_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Developers:"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/detail"/>

            <TextView
                android:id="@+id/team_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dev_team"
                android:textColor="@color/black"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dev_team" />

            <View
                android:id="@+id/line6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey2"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/team_members"/>

            <TextView
                android:id="@+id/src_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="RESOURCES"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line6" />

            <TextView
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/source_link"
                android:textAlignment="center"
                android:fontFamily="@font/be_vietnam"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/src_data"
                android:focusable="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>